feat/painel-adm: novas rotas para o painel, novo schema do db e correcoes extras para acompanhar a nova feat
